Fix download button spacing

--- a/src/credo/static/credo/styles.css
+++ b/src/credo/static/credo/styles.css
@@ -55,6 +55,7 @@ svg.tooltipped:hover {
 #downloadButton {
     float: left;
     z-index: 10;
+    margin-right: 0.25em;
 }
 
 #downloadSpan {
